@@ -2764,11 +2764,6 @@ operator|.
 name|name
 argument_list|)
 expr_stmt|;
-name|int
-name|count
-init|=
-literal|0
-decl_stmt|;
 comment|//get the modified rows in this entity
 while|while
 condition|(
@@ -2802,9 +2797,6 @@ argument_list|(
 name|row
 argument_list|)
 expr_stmt|;
-name|count
-operator|++
-expr_stmt|;
 name|importStatistics
 operator|.
 name|rowsCount
@@ -2813,37 +2805,6 @@ name|incrementAndGet
 argument_list|()
 expr_stmt|;
 block|}
-name|LOG
-operator|.
-name|info
-argument_list|(
-literal|"Completed ModifiedRowKey for Entity: "
-operator|+
-name|entity
-operator|.
-name|name
-operator|+
-literal|" rows obtained : "
-operator|+
-name|count
-argument_list|)
-expr_stmt|;
-name|count
-operator|=
-literal|0
-expr_stmt|;
-comment|// identifying the deleted rows from this entities
-name|LOG
-operator|.
-name|info
-argument_list|(
-literal|"Running DeletedRowKey() for Entity: "
-operator|+
-name|entity
-operator|.
-name|name
-argument_list|)
-expr_stmt|;
 comment|//get the deleted rows for this entity
 name|Set
 argument_list|<
@@ -2855,6 +2816,29 @@ name|Object
 argument_list|>
 argument_list|>
 name|deletedSet
+init|=
+operator|new
+name|HashSet
+argument_list|<
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|Object
+argument_list|>
+argument_list|>
+argument_list|()
+decl_stmt|;
+name|Set
+argument_list|<
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|Object
+argument_list|>
+argument_list|>
+name|deltaRemoveSet
 init|=
 operator|new
 name|HashSet
@@ -2893,15 +2877,59 @@ operator|==
 literal|null
 condition|)
 break|break;
+comment|//Check to see if this delete is in the current delta set
+for|for
+control|(
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|Object
+argument_list|>
+name|modifiedRow
+range|:
+name|deltaSet
+control|)
+block|{
+if|if
+condition|(
+name|modifiedRow
+operator|.
+name|get
+argument_list|(
+name|entity
+operator|.
+name|pk
+argument_list|)
+operator|.
+name|equals
+argument_list|(
+name|row
+operator|.
+name|get
+argument_list|(
+name|entity
+operator|.
+name|pk
+argument_list|)
+argument_list|)
+condition|)
+block|{
+name|deltaRemoveSet
+operator|.
+name|add
+argument_list|(
+name|modifiedRow
+argument_list|)
+expr_stmt|;
+block|}
+block|}
 name|deletedSet
 operator|.
 name|add
 argument_list|(
 name|row
 argument_list|)
-expr_stmt|;
-name|count
-operator|++
 expr_stmt|;
 name|importStatistics
 operator|.
@@ -2911,6 +2939,32 @@ name|incrementAndGet
 argument_list|()
 expr_stmt|;
 block|}
+comment|//asymmetric Set difference
+name|deltaSet
+operator|.
+name|removeAll
+argument_list|(
+name|deltaRemoveSet
+argument_list|)
+expr_stmt|;
+name|LOG
+operator|.
+name|info
+argument_list|(
+literal|"Completed ModifiedRowKey for Entity: "
+operator|+
+name|entity
+operator|.
+name|name
+operator|+
+literal|" rows obtained : "
+operator|+
+name|deltaSet
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
 name|LOG
 operator|.
 name|info
@@ -2923,7 +2977,10 @@ name|name
 operator|+
 literal|" rows obtained : "
 operator|+
-name|count
+name|deletedSet
+operator|.
+name|size
+argument_list|()
 argument_list|)
 expr_stmt|;
 name|myModifiedPks
