@@ -290,7 +290,7 @@ name|MockDataSource
 operator|.
 name|setIterator
 argument_list|(
-literal|"select * from x where x.id = '5'"
+literal|"select * from x where id = '5'"
 argument_list|,
 name|parentRow
 operator|.
@@ -354,6 +354,284 @@ literal|"desc:hello"
 argument_list|)
 argument_list|,
 literal|"//*[@numFound='1']"
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+annotation|@
+name|SuppressWarnings
+argument_list|(
+literal|"unchecked"
+argument_list|)
+DECL|method|testCompositePk_DeltaImport_DeletedPkQuery
+specifier|public
+name|void
+name|testCompositePk_DeltaImport_DeletedPkQuery
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|List
+name|parentRow
+init|=
+operator|new
+name|ArrayList
+argument_list|()
+decl_stmt|;
+name|parentRow
+operator|.
+name|add
+argument_list|(
+name|createMap
+argument_list|(
+literal|"id"
+argument_list|,
+literal|"11"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|MockDataSource
+operator|.
+name|setIterator
+argument_list|(
+literal|"select * from x"
+argument_list|,
+name|parentRow
+operator|.
+name|iterator
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|List
+name|childRow
+init|=
+operator|new
+name|ArrayList
+argument_list|()
+decl_stmt|;
+name|childRow
+operator|.
+name|add
+argument_list|(
+name|createMap
+argument_list|(
+literal|"desc"
+argument_list|,
+literal|"hello"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|MockDataSource
+operator|.
+name|setIterator
+argument_list|(
+literal|"select * from y where y.A=11"
+argument_list|,
+name|childRow
+operator|.
+name|iterator
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|super
+operator|.
+name|runFullImport
+argument_list|(
+name|dataConfig
+argument_list|)
+expr_stmt|;
+name|assertQ
+argument_list|(
+name|req
+argument_list|(
+literal|"id:11"
+argument_list|)
+argument_list|,
+literal|"//*[@numFound='1']"
+argument_list|)
+expr_stmt|;
+name|List
+name|deltaRow
+init|=
+operator|new
+name|ArrayList
+argument_list|()
+decl_stmt|;
+name|deltaRow
+operator|.
+name|add
+argument_list|(
+name|createMap
+argument_list|(
+literal|"id"
+argument_list|,
+literal|"15"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|deltaRow
+operator|.
+name|add
+argument_list|(
+name|createMap
+argument_list|(
+literal|"id"
+argument_list|,
+literal|"17"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|MockDataSource
+operator|.
+name|setIterator
+argument_list|(
+literal|"select id from x where last_modified> NOW"
+argument_list|,
+name|deltaRow
+operator|.
+name|iterator
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|List
+name|deltaDeleteRow
+init|=
+operator|new
+name|ArrayList
+argument_list|()
+decl_stmt|;
+name|deltaDeleteRow
+operator|.
+name|add
+argument_list|(
+name|createMap
+argument_list|(
+literal|"id"
+argument_list|,
+literal|"11"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|deltaDeleteRow
+operator|.
+name|add
+argument_list|(
+name|createMap
+argument_list|(
+literal|"id"
+argument_list|,
+literal|"17"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|MockDataSource
+operator|.
+name|setIterator
+argument_list|(
+literal|"select id from x where last_modified> NOW AND deleted='true'"
+argument_list|,
+name|deltaDeleteRow
+operator|.
+name|iterator
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|parentRow
+operator|=
+operator|new
+name|ArrayList
+argument_list|()
+expr_stmt|;
+name|parentRow
+operator|.
+name|add
+argument_list|(
+name|createMap
+argument_list|(
+literal|"id"
+argument_list|,
+literal|"15"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|MockDataSource
+operator|.
+name|setIterator
+argument_list|(
+literal|"select * from x where id = '15'"
+argument_list|,
+name|parentRow
+operator|.
+name|iterator
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|parentRow
+operator|=
+operator|new
+name|ArrayList
+argument_list|()
+expr_stmt|;
+name|parentRow
+operator|.
+name|add
+argument_list|(
+name|createMap
+argument_list|(
+literal|"id"
+argument_list|,
+literal|"17"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|MockDataSource
+operator|.
+name|setIterator
+argument_list|(
+literal|"select * from x where id = '17'"
+argument_list|,
+name|parentRow
+operator|.
+name|iterator
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|super
+operator|.
+name|runDeltaImport
+argument_list|(
+name|dataConfig
+argument_list|)
+expr_stmt|;
+name|assertQ
+argument_list|(
+name|req
+argument_list|(
+literal|"id:15"
+argument_list|)
+argument_list|,
+literal|"//*[@numFound='1']"
+argument_list|)
+expr_stmt|;
+name|assertQ
+argument_list|(
+name|req
+argument_list|(
+literal|"id:11"
+argument_list|)
+argument_list|,
+literal|"//*[@numFound='0']"
+argument_list|)
+expr_stmt|;
+name|assertQ
+argument_list|(
+name|req
+argument_list|(
+literal|"id:17"
+argument_list|)
+argument_list|,
+literal|"//*[@numFound='0']"
 argument_list|)
 expr_stmt|;
 block|}
@@ -503,7 +781,7 @@ literal|"<dataConfig>\n"
 operator|+
 literal|"<document>\n"
 operator|+
-literal|"<entity name=\"x\" pk=\"x.id\" query=\"select * from x\" deltaQuery=\"select id from x where last_modified> NOW\">\n"
+literal|"<entity name=\"x\" pk=\"id\" query=\"select * from x\" deletedPkQuery=\"select id from x where last_modified> NOW AND deleted='true'\" deltaQuery=\"select id from x where last_modified> NOW\">\n"
 operator|+
 literal|"<field column=\"id\" />\n"
 operator|+
